--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,6 @@ All required information is service dependent and we may use the above said user
 
 Such information will not be considered as sensitive if it is freely available and accessible in the public domain or is furnished under the Right to Information Act, 2005 or any other law for the time being in force.</string>
     <string name="address">#1253, Amazing Villa, 8th Cross, Gokhale Road, Rajarajeswari Nagar, Opp. New Horizon Public School, Near Rangamandira, Bangalore 560 098 Karnataka.</string>
+    <string name="sign_up_here"><u>Sign up here</u></string>
 
 </resources>
